// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStatus connected 1`] = `
<div
  className="sc-gsnTZi eJXUcq"
>
  Connected to server.
</div>
`;

exports[`ConnectionStatus disconnected 1`] = `
<div
  className="sc-bczRLJ kycCKY"
>
  Not connected to server. Any local changes will be overwritten after connection.
</div>
`;
